# DBus

./: .gitignore  README.md  dbus.md  dbusDaemon.md  pyproject.toml
dbus/: SpinCLI.py
dbus/data/: TodaysDollarValueToBRL.txt  dollar.quote.Today.xml  org.example.HelloWorld.xml
dbus/scripts/: Calculator.sh  Dollar.sh  TodaysDollarValueToBRL.txt  session.py
dbus/services/: CalculatorService.py  DollarTodayService.py  dolar.py  service.py
tests/: test_dbus.py
