[tool.poetry]
name = "DBus"
version = "0.1.0"
description = ""
authors = ["Gabriel Dias Mazieri <gabrieldias7200@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dasbus = "^1.6"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
