[tool.poetry]
name = "DBus"
version = "0.1.0"
description = ""
authors = ["Gabriel Dias Mazieri <gabrieldias7200@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dasbus = "^1.6"
PyGObject = "^3.42.1"
beautifulsoup4 = "^4.11.1"
typer = "^0.4.1"
halo = "^0.0.31"
requests = "^2.27.1"
multiprocess = "^0.70.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
